Started creating API for dictionary data.

--- a/example_pages/tutorial.html
+++ b/example_pages/tutorial.html
@@ -13,7 +13,9 @@
     <h1>Welcome</h1>
     <h2>This is our webpage</h2>
     <p>Hello, this is our first webpage.</p>
-    <img src="cat.png" style="width:500px">
+    <h3>Below u r gonna see like the best game for the SNES, no cap. fr fr</h3>
+    <img src="{{url_for('static', filename='mickey.jpg')}}" style="width:500px">
+    <p>boom, there it is. wow.</p>
     <br>
     <br>
     <a href="https://google.com">Google Page</a>
